# jure

./: .clang-format  .clang-tidy  CMakeLists.txt  flake.nix
src/: main.cpp
src/glfw/: initGlfw.cpp  initGlfw.h
src/vk/core/: physical_device.cpp  physical_device.h  virtual_device_queue.cpp  virtual_device_queue.h  vk_core.cpp  vk_core.h
src/vk/utils/: vulkan_helpers.cpp  vulkan_helpers.h
src/vk/window/: image.cpp  image.h  imageViews.cpp  imageViews.h  swapchain.cpp  swapchain.h  vk_window.cpp  vk_window.h
src/vulkan/context/: vulkan_context.cpp  vulkan_context.h
src/vulkan/core/: image.cpp  image.h  imageView.cpp  imageView.h  instance.cpp  instance.h  physical_device.cpp  physical_device.h  queueUtils.cpp  queueUtils.h  surface.cpp  surface.h  swapchain.cpp  swapchain.h  virtual_device_queue.cpp  virtual_device_queue.h
